--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^19",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19",
+    "react-dropzone": "^14.4.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
